syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.spring.grpc.proto";
option java_outer_classname = "OrderServiceProto";

package order;

// Order Service Definition
service OrderService {
  // Create a new order
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  
  // Get order by ID
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  
  // List all orders
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
  
  // Update order status
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

// Request to create an order
message CreateOrderRequest {
  string user_id = 1;
  string product_id = 2;
  string product_name = 3;
  int32 quantity = 4;
  double price = 5;
}

// Response after creating an order
message CreateOrderResponse {
  string order_id = 1;
  string user_id = 2;
  string product_id = 3;
  string product_name = 4;
  int32 quantity = 5;
  double price = 6;
  double total_amount = 7;
  string status = 8;
  string created_at = 9;
  string message = 10;
}

// Request to get an order
message GetOrderRequest {
  string order_id = 1;
}

// Response with order details
message GetOrderResponse {
  string order_id = 1;
  string user_id = 2;
  string product_id = 3;
  string product_name = 4;
  int32 quantity = 5;
  double price = 6;
  double total_amount = 7;
  string status = 8;
  string created_at = 9;
  string updated_at = 10;
}

// Request to list orders
message ListOrdersRequest {
  int32 page = 1;
  int32 size = 2;
  string user_id = 3;
}

// Response with list of orders
message ListOrdersResponse {
  repeated GetOrderResponse orders = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 size = 4;
}

// Request to update order status
message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}

// Response after updating order status
message UpdateOrderStatusResponse {
  string order_id = 1;
  string status = 2;
  string updated_at = 3;
  string message = 4;
}
